--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -22,7 +22,7 @@
 
 <button (click)="name='joaquin'" >Joaquinizar</button> -->
 
-<app-contador-dos [increment]="incrementNum"></app-contador-dos>
+<!-- <app-contador-dos [increment]="incrementNum"></app-contador-dos>
 
 <label for="initValue">Init value:</label>
 <input  type="number" #incrementNum name="initValue">
@@ -30,4 +30,7 @@
 <label for="increment">Increment:</label>
 <input type="number" name="increment">
 
-<h2>Current value: {{counter}}</h2>
+<h2>Current value: {{counter}}</h2> -->
+
+<!-- <app-registro (registerUser)="showRegister($event)"></app-registro> -->
+
